--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,24 @@
    font-family: Helvetica, Arial, sans-serif;
    margin:0;
    padding:0;
+   -webkit-box-sizing: border-box;
    box-sizing: border-box;
-   color:#299a9c
+   color:#299a9c;
 }
 
 body{
    background-color: #e3e4e8;
 }
 
+
+/* All Section styles */
+
 /* Header styling section */
 header{
-   background-color: #323136;
+   background-image: url("../images/bg-hero.jpg");
+   background-attachment: fixed;
+   background-position:center;
+   background-size:cover;
    display:flex;
    justify-content: space-between;
    flex-wrap:wrap;
@@ -21,12 +28,12 @@ header{
 }
 
 header h1{
-   color:#323136;
+   color:rgb(40, 12, 151);
    margin-left:12px;
    font-size:36px;
    margin-left: 0;
    padding-left: 6%;
-   background-color:#299a9c;
+   background-color:rgba(108, 36, 159, 0.2);
    padding-right:5px;
    padding-top:10px;
    padding-bottom:10px;
@@ -54,9 +61,12 @@ header nav ul li a{
    text-decoration: none;
    border-bottom: 4px solid #299a9c;
 }
+
 /* hero section start */
 .hero{
-   background-image: url("../assets/images/bg-hero.jpg");
+   width:100%;
+   background-image: url("../images/bg-hero.jpg");
+   background-attachment: fixed;
    background-position: center;
    background-size:cover;
    display:flex;
@@ -70,43 +80,37 @@ header nav ul li a{
    width:30%;
    padding:7px 15px;
    text-align:center;
-   background-color: rgba(255, 255, 255, 0.2);
-   color:#d8d5e3;
+   background-color: rgba(41, 154, 156,.3);
+   color:#c4c1cd;
    width:25%;
    margin-top: 50px;
+   font-weight:700;
 }
 /* Hero style ends */
 
-/* ABOUT ME section starts */
-.about-me{
-   display:flex;
-   width:80%;
-   margin:auto;
-}
 
-.about-me h2{
-   font-size:40px;
-   width:20%;
-   text-align: right;
-   border-right: 5px solid #299a9c;
-   padding-right: 15px;
-   border-radius:5px;
-}
-.about-me p{
-   font-size:15px;
-   width:70%;
-   margin-left:45px;
-   margin-bottom:20px;
-}
 
+/* About me section */
+
+/* ABOUT me Section end */
+
+/* CONTACT me section Start */
+
+
+/* BORDERS */
 
 /* Utility classes */
-.flex-flow{
-   display: flex;
+.section-title{
+   font-size:35px;
+   border-right: 5px solid #299a9c;
+   text-align: right;
+   margin-right: 20px;
 }
 
+
+
 /* Media Querry for screens less than 768px (Tablets) */
-@media screen and (max-width:768px){
+/* @media screen and (max-width:768px){
    header{
       padding-bottom:10px;
       justify-content:center;
@@ -119,4 +123,4 @@ header nav ul li a{
       width: 100%;
    }
 
-}
+} */
