--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,18 +4,15 @@
    padding:0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
-   color:#299a9c;
 }
 
-body{
-   background-color: #e3e4e8;
-}
 
 
 /* All Section styles */
 
 /* Header styling section */
 header{
+   background-color:rgb(0,0,0,0.4);
    background-image: url("../images/bg-hero.jpg");
    background-attachment: fixed;
    background-position:center;
@@ -25,88 +22,203 @@ header{
    flex-wrap:wrap;
    align-items:center;
    padding:6px 0;
+   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
 }
 
 header h1{
-   color:rgb(40, 12, 151);
+   letter-spacing: 2px;
+   color:rgb(177, 201, 222);
    margin-left:12px;
-   font-size:36px;
+   font-size:38px;
    margin-left: 0;
    padding-left: 6%;
-   background-color:rgba(108, 36, 159, 0.2);
    padding-right:5px;
    padding-top:10px;
    padding-bottom:10px;
    border-top-right-radius:15px;
+   cursor: pointer;
+}
 
+header h1 span{
+   color:rgb(209, 52, 78);
 }
 
 header nav {
-   margin-right: 5%;
+   margin-right: 10%;
 }
 
-header nav ul{
-   display:flex;
-   flex-wrap:wrap;
-}
 
 header nav ul li{
+   display: inline-block;
    list-style: none;
    margin:7px 15px;
    font-size:23px;
 }
 
-header nav ul li a{
+header a{
+   color:rgb(177, 201, 222);
    padding:0 20px;
    text-decoration: none;
-   border-bottom: 4px solid #299a9c;
+   padding:10px;
+   transition: .4s;
+}
+
+header a:hover{
+   color:rgb(255, 255, 255);
+   background-color:rgb(209, 52, 78);
+   border-radius:30px;
+   transition: .4s;
+}
+
+/* for scaling the nav links */
+header, li{
+   transition: transform 0.4s;
+}
+header li:hover{
+   transform: scale(1.2)
 }
 
 /* hero section start */
 .hero{
-   width:100%;
    background-image: url("../images/bg-hero.jpg");
    background-attachment: fixed;
-   background-position: center;
+   background-position:center;
    background-size:cover;
+   width:100%;
    display:flex;
-   justify-content: flex-end;
+   flex-flow: row wrap;
+   justify-content: center;
    align-items:center;
-   height: 150px;
-   margin-bottom:40px;
 }
 
-.cool-sub{
-   width:30%;
-   padding:7px 15px;
+.my-quote{
+   line-height:1.3;
+   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
+   width:40%;
+   padding:20px 15px;
    text-align:center;
-   background-color: rgba(41, 154, 156,.3);
-   color:#c4c1cd;
-   width:25%;
-   margin-top: 50px;
-   font-weight:700;
+   margin-top: 80px;
+   color:rgb(177, 201,222);
 }
+
+.name{
+   letter-spacing: 2px;
+   font-size:40px;
+   color:rgb(177, 201, 222);
+   margin-bottom:20px;
+}
+.name span{
+   color:rgb(209, 52, 78);
+}
+
 /* Hero style ends */
 
-
-
 /* About me section */
+.about-me {
+   background-color:rgb(0, 0, 0);
+   color:rgb(225, 225, 225);
+   padding:60px;
+}
+
+.background-me{
+   display: flex;
+   flex: row wrap;
+   justify-content: center;
+   align-items: center;
+   gap:2%;
+   background-color: rgb(102, 97, 97);
+   padding:20px;
+   border-radius:5px;
+   box-shadow: 8px 9px 20px rgba(255, 255, 255, .5),
+               -8px -7px 20px rgba(255, 255, 255,.5);
+}
+
+.my-text{
+   width:50%;
+}
+
+.my-text h2{
+   text-align:center;
+   letter-spacing:1px;
+   font-size:35px;
+   color:rgb(177, 201, 222);
+   margin: 0 auto 15px auto;
+   width:50%;
+
+}
+
+.my-text h2 span{
+   color:rgb(209, 52, 78);
+}
+
+.my-text p {
+   padding:20px;
+   text-align:left;
+   line-height:1.5;
+   box-shadow:inset 5px 5px 10px rgba(147, 140, .1),
+              inset -5px -5px 10px rgba(147, 140, .1);
+
+}
+
+.about-me img{
+   width:20%;
+}
 
 /* ABOUT me Section end */
 
 /* CONTACT me section Start */
+.contact-me{
+   background-color: black;
+   border-bottom: 50px solid black;
+   display:flex;
+   flex-flow:column wrap;
+   align-items:center;
+}
+
+.contact-me h2{
+   text-align:center;
+   letter-spacing:1px;
+   font-size:35px;
+   color:rgb(177, 201, 222);
+   margin: 0 auto 15px auto;
+   width:50%;
+   margin-bottom:40px;
+}
+
+.contact-me h2 span{
+   color:rgb(209, 52, 78);
+   border-bottom:2px solid rgb(209, 52, 78);
+}
+
+.contact-info a{
+   display:inline-block;
+   text-decoration:none;
+   font-style: normal;
+   text-align: center;
+   margin:0px 50px;
+   color:rgb(177, 201, 222);
+   transition: transform .4s;
+}
+
+.contact-info a img{
+   position:relative;
+   top:10px;
+}
+
+.contact-info a .twitter-icon{
+   width:35px;
+   height:auto;
+}
+
+.contact-info a:hover{
+   transform: scale(1.5);
+}
+
 
 
 /* BORDERS */
 
 /* Utility classes */
-.section-title{
-   font-size:35px;
-   border-right: 5px solid #299a9c;
-   text-align: right;
-   margin-right: 20px;
-}
-
 
 
 /* Media Querry for screens less than 768px (Tablets) */
