--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,11 @@ header li:hover{
 
 /* ABOUT me Section end */
 
+/* My Work Section starts */
+
+
+/* My Work Section ends */
+
 /* CONTACT me section Start */
 .contact-me{
    background-color: black;
