--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ header li:hover{
 }
 
 .my-text h2{
+   border-bottom:2px solid;
    text-align:center;
    letter-spacing:1px;
    font-size:35px;
@@ -157,6 +158,7 @@ header li:hover{
 
 .my-text h2 span{
    color:rgb(209, 52, 78);
+   border-bottom:3px solid;
 }
 
 .my-text p {
@@ -177,21 +179,24 @@ header li:hover{
 /* My Work Section starts */
 
 .my-work{
-   margin-bottom: 25px;
+   background-color: black;
+   padding-top:50px;
 }
 
 .my-work h2{
+   border-bottom:2px solid;
    text-align:center;
    letter-spacing:1px;
    font-size:35px;
    color:rgb(177, 201, 222);
    margin: 0 auto 15px auto;
-   width:50%;
+   width:20%;
    margin-bottom:40px;
 }
 
 .my-work h2 span{
    color: rgb(209, 52, 78);
+   border-bottom:3px solid;
 }
 
 .project-group{
@@ -200,6 +205,7 @@ header li:hover{
    justify-content: center;
    align-items: center;
    gap: 80px;
+   padding-bottom:50px;
 }
 .run-buddy .img {
    background-image: url("../images/projectsImg/run-buddy.PNG");
@@ -219,8 +225,7 @@ header li:hover{
    cursor: pointer;
    background-size: cover;
    background-position:top;
-   border-top-left-radius: 10px;
-   border-top-right-radius: 10px;
+   box-shadow: 10px 10px 10px rgba(255, 255, 255, .5);
    transition: box-shadow .3s linear;
 }
 
@@ -244,10 +249,8 @@ header li:hover{
    opacity:0;
    -webkit-transition: visibility 0s, opacity .5s linear;
    transition: visibility 0s, opacity .5s linear;
-   
+
 }
-
-
 
 .project:hover .link{
    visibility: visible;
@@ -257,8 +260,6 @@ header li:hover{
    border-top-left-radius:10px;
 
 }
-
-
 
 /* My Work Section ends */
 
@@ -277,12 +278,14 @@ header li:hover{
    font-size:35px;
    color:rgb(177, 201, 222);
    margin: 0 auto 15px auto;
-   width:50%;
+   width:20%;
    margin-bottom:40px;
+   border-bottom:2px solid;
 }
 
 .contact-me h2 span{
    color:rgb(209, 52, 78);
+   border-bottom:3px solid;
 }
 
 .contact-info a{
