--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ html{
 header{
    z-index:999;
    position:fixed;
-   width:100%;
+   width:100vw;
    background-color:rgb(0,0,0,0.4);
    background-image: url("../images/bg-hero.jpg");
    background-attachment: fixed;
@@ -91,7 +91,7 @@ header li:hover{
    background-attachment: fixed;
    background-position:center;
    background-size:cover;
-   width:100%;
+   width:100vw;
    display:flex;
    flex-flow: row wrap;
    justify-content: center;
@@ -229,6 +229,11 @@ header li:hover{
    transition: box-shadow .3s linear;
 }
 
+.run-buddy .img{
+   width:550px;
+   height: 300px;
+}
+
 .project .img:hover{
    box-shadow: inset 0 0 0 1000px rgba(51, 48, 48, 0.667);  
 }
@@ -355,7 +360,7 @@ header li:hover{
       align-items: center;
    }
    header h1{
-      margin-bottom:10px;
+      /* margin-bottom:10px; */
       border-radius:0px;
       text-align:center;
       width: 100%;
@@ -387,20 +392,36 @@ header li:hover{
       align-items: center;
    }
 
+   header h1{
+      font-size:30px;
+   }
+
    header nav {
       margin-right:0;
       width:100%;
    }
 
-   .my-quote{
+   header nav ul li a {
+      font-size:20px;
+   }
+
+   .hero{
+      height:80vh;
+   }
+   
+   /* .my-quote{
       max-width:fit-content(20em);
+      
+   } */
+   .my-quote{
+      width:100%;
    }
 
    .my-quote h2{
       letter-spacing: 1.5px;
-      font-size:30px;
+      font-size:25px;
    }
-   
+
    
    .about-me{
       padding:30px;
@@ -430,6 +451,20 @@ header li:hover{
       display:flex;
       flex-flow:column wrap;
       gap:10px;
+   }
+}
+
+@media screen and (max-width: 500px){
+
+   .my-work{
+      overflow:hidden;
+   }
+   .my-work .project{
+      width: 100vw;
+   }
+
+   .header{
+      width: 100vw;
    }
 }
 
