added basebal organizer in the project list

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,11 @@ header li:hover{
    background-size: cover;
 }
 
+.baseball-organizer{
+   background-image: url("../images/projectsImg/baseball-organizer.PNG");
+   background-size: cover;
+}
+
 .project{
    position:relative;
 }
